# DubbingTool

./: .clang-format  .clang-tidy  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  DubbingTool.pro  README.md  TODO.md  appsettings.cpp  appsettings.h  assprocessor.cpp  assprocessor.h  build.bat  build_output.txt  check_logs.py  font_finder_wrapper.py  fontfinder.cpp  fontfinder.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manualassembler.cpp  manualassembler.h  manualassemblywidget.cpp  manualassemblywidget.h  manualassemblywidget.ui  manualrenderer.cpp  manualrenderer.h  manualrenderwidget.cpp  manualrenderwidget.h  manualrenderwidget.ui  missingfilesdialog.cpp  missingfilesdialog.h  missingfilesdialog.ui  placeholderwidget.h  postgenerator.cpp  postgenerator.h  processmanager.cpp  (+35 more)
.github/workflows/: build_windows.yml  test.yml  windows-ci.yml
ClipboardAnalyzer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
data/: post_template_catalog.json
docs/: concat-cfr-debug-report.md
resources/: font_finder_wrapper.py  resources.qrc
src/core/: appcontroller.cpp  appcontroller.h  appsettings.cpp  appsettings.h  chapterhelper.cpp  chapterhelper.h  manualextractionbridge.cpp  manualextractionbridge.h  processmanager.cpp  processmanager.h  workflowmanager.cpp  workflowmanager.h
src/models/: releasetemplate.cpp  releasetemplate.h
src/processing/: assprocessor.cpp  assprocessor.h  concattbrenderer.cpp  concattbrenderer.h  fontfinder.cpp  fontfinder.h  manualassembler.cpp  manualassembler.h  manualrenderer.cpp  manualrenderer.h  postgenerator.cpp  postgenerator.h  renderhelper.cpp  renderhelper.h  telegramformatter.cpp  telegramformatter.h
src/ui/: chaptertimingsdialog.cpp  chaptertimingsdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  manualassemblywidget.cpp  manualassemblywidget.h  manualextractionwidget.cpp  manualextractionwidget.h  manualrenderwidget.cpp  manualrenderwidget.h  missingfilescontroller.cpp  missingfilescontroller.h  missingfilesdialog.cpp  missingfilesdialog.h  placeholderwidget.h  publicationwidget.cpp  publicationwidget.h  rerenderdialog.cpp  rerenderdialog.h  settingsdialog.cpp  settingsdialog.h  setupwizarddialog.cpp  setupwizarddialog.h  styleselectordialog.cpp  styleselectordialog.h  telegrampasteedit.cpp  telegrampasteedit.h  templateeditor.cpp  templateeditor.h  torrentselectordialog.cpp  torrentselectordialog.h  trackselectordialog.cpp  trackselectordialog.h
templates/: Новый шаблон.json
tests/: fontfinder_test.cpp
tests/test_data/: consecutive_tag_blocks.ass  inline_fn_override.ass  italic_style_missing.ass  multiple_inline_fonts.ass
ui/: mainwindow.ui  manualassemblywidget.ui  manualextractionwidget.ui  manualrenderwidget.ui  missingfilesdialog.ui  publicationwidget.ui  rerenderdialog.ui  settingsdialog.ui  styleselectordialog.ui  templateeditor.ui  torrentselectordialog.ui  trackselectordialog.ui
ui/qml/: Main.qml
ui/qml/pages/: AutoModePage.qml  ManualExtractionPage.qml  MissingFilesDialog.qml  PlaceholderPage.qml  TemplateEditorDialog.qml
